# tree-sitter-neep

./: .gitignore  Cargo.toml  grammar.js  package-lock.json  package.json  tree-sitter.json
bindings/rust/: build.rs  lib.rs
queries/: highlights.scm  injections.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: comments.txt  documents.txt  ingredients.txt  steps.txt
